--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
+BuildPath.txt
 doc/Dokumentation.pdf
+doc/.texlipse
 *~
+*-eps-converted-to.pdf
+*.aux
+*.bbl
+*.blg
+*.idx
+*.ilg
+*.ind
+*.lof
 *.o
+*.project
+*.synctex.gz
+*.toc
 doc/html/
 doc/latex/
 doc/*.tmp
