--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@ doc/.texlipse
 *~
 *-eps-converted-to.pdf
 *.aux
+*.bak
 *.bbl
 *.blg
 *.idx
 *.ilg
 *.ind
 *.lof
+*.log
 *.o
 *.project
 *.synctex.gz
